2002-04-06  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>

	* marching_cubes.c: Copied the RCS file
	~david/Source/Marching_cubes/RCS/marching_cubes.c,v to the CVS
	repository.  After checkout, copied the (unchecked-in)
	marching_cubes.c file overtop.

2001-11-12  Jason Lerch       <jason@bic.mni.mcgill.ca>

	* added ParseArgv.{c,h}
	* volume_object_evaluate.c: added ParseArgv includes, added
	options letting the user specify whether they want to use linear,
	nearest_neighbour, or cubic interpolation in the evaluation.
	* Makefile.am: added volume_object_evaluate_SOURCES with
	ParseArgv.c
	
2001-11-07  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>

	* make_gradient_volume.c (main): Correct parameter ordering
	for create_gradient_volume() call.
	(create_gradient_volume): Output magnitude rather than squared
	magnitude.  Set the real_range on output volume correctly.

2001-10-28  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>

	* mincresample.c:
	* mincresample.h: Removed.  Was a 1996 version of the files from
	MINC.

	* Makefile.am: Removed all traces of mincresample.  Add 
	AUTOMAKE_OPTIONS, ACLOCAL_AMFLAGS and EXTRA_DIST so that
	"make distcheck" works.

	* tagtominc.c (main): Bugfix.  Pass tag_id as the structure
	ID list, not the patient ID list.

	* README: New.  Describes the usage of some of these
	utilities.

	* TODO:
	* NEWS: New.

	* configure.ac: Use AC_PROG_LIBTOOL instead of AM_.

	* autogen.sh: Add explanatory text if directory m4 is not present.

2001-10-22  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>

	* *.c: Replace <internal_volume_io.h> by
	<volume_io/internal_volume_io.h>.  Replace <images.h> and
	<numerical.h> by <bicpl/...>.

	* configure.in: Do not check for header <numerical.h>, nor for
	<internal_volume_io.h>.  Do not probe for C++ compiler.

2001-09-24  Jason Lerch   <jason@bic.mni.mcgill.ca>

	* minc_to_rgb.c: Changed UNSIGNED_LONG to UNSIGNED_INT

2001-09-06  Jason Lerch   <jason@bic.mni.mcgill.ca>
